refs #6 fixed : remove RichFaces for no,, too much Ajax request built in refs #8 Home page made in jQuery
git-svn-id: http://code.a-dream-zone.com/svn/adreamzone/adreamzone-web/trunk@200 2db8b5e3-2670-4d21-bcd5-9dfca1aafa91

--- a/src/main/webapp/css/home/home.css
+++ b/src/main/webapp/css/home/home.css
@@ -37,3 +37,11 @@
 #frontPage{
 	width: 600px;
 }
+
+#menu div{
+	float: none;
+}
+#menu ul{
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
